create new file in css folder (LandingPage.css - Add two images in img folder and style them - also edit the link href in html file Relates #9

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 	<!-- link style.css page  -->
-	<link rel="stylesheet" href="landingpage.css">
+	<link rel="stylesheet" href="css/landingPage.css">
 </head>
 <body>
 	<!-- Name of game -->
