create new js file - add event listener to start btn - create function to move to the next page - Create New html (Play.html) Relates #7

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         <a href="index.html" class="start-text"></a>
 		Start Game
 	</button>
-	<script src="landingpage.js"></script>
+	<script src="js/landingPage.js"></script>
 </body>
 </html>
